--- a/src/app/dashboard/users/user-lists/user-lists.component.html
+++ b/src/app/dashboard/users/user-lists/user-lists.component.html
@@ -3,7 +3,7 @@
     <div class="col-4">
         <div class="alert alert-info alert-dismissable fade show has-icon"><i class="la la-info alert-icon"></i>
           <strong>Information</strong>
-          <br>Page est en construction
+          <br>Page en construction
         </div>
     </div>
   </div>
