--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -4,31 +4,41 @@
 
       <h5 class="font-strong mb-4">LES CANDIDATS</h5>
       <div class="mb-4">
-        <form class="form-inline form-success mb-4" action="javascript:;">
-          <div class=" mb-2 mr-sm-2 mb-sm-0">
-            <select class=" select2 form-control" id="type-status" title="Veuillez choisir" data-style="btn-solid">
-              <option value="">Tous les status</option>
-              <option value="pending">En attente</option>
-              <option value="1">Publier</option>
-              <option value="0">Désactiver</option>
-            </select>
-          </div>
+        
+        <form class="form-success mb-4">
 
-          <label class="sr-only" for="ex-pass">Email</label>
-          <app-activity-area class=" mb-2 mr-sm-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
-          <div class="form-group mb-2 mr-sm-2 mb-sm-0">
-            <div class="input-group-icon input-group-icon-left mr-3">
-              <span class="input-icon input-icon-right font-16"><i class="fa fa-calendar"></i></span>
-              <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
+            <div class="row mb-4">
+              <div class="col-md-4 mb-2 mb-sm-0">
+                <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
+                  <option value="">Tous les status</option>
+                  <option value="pending">En attente</option>
+                  <option value="1">Publier</option>
+                  <option value="0">Désactiver</option>
+                </select>
+              </div>
+              <div class="col-md-4 form-group mb-2 mb-sm-0">
+                  <div class="input-group-icon input-group-icon-left mr-3">
+                    <span class="input-icon input-icon-right font-16"><i class="fa fa-calendar"></i></span>
+                    <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
+                  </div>
+                </div>
+              <app-activity-area class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
+    
             </div>
-          </div>
-          <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-            <div class="input-group-icon input-group-icon-left mr-3">
-              <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
-              <input class="form-control form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
+    
+            <div class="row">
+              <div class="col-md-4 form-check mb-2 mb-sm-0">
+                <div class="input-group-icon input-group-icon-left mr-3">
+                  <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+                  <input class="form-control form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <button type="button" (click)="resetFilterSearch()" class="btn btn-sm btn-info">Reinitialiser les filtres</button>
+              </div>
             </div>
-          </div>
-        </form>
+    
+          </form>
 
 
         <div class="table-responsive row">
