--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -1,68 +1,71 @@
 <div class="page-content fade-in-up">
-    <div class="ibox">
-      <div class="ibox-body">
-        <h5 class="font-strong mb-4">LES ENTREPRISES</h5>
-        <div class="flexbox mb-4">
-          <div class="row">
-            <div class="col-8">
-              <div class="container mb-4">
-                <div class="row justify-content-start">
-                  <div class="col-4">
-                    <div class="flexbox">
-                      <select class="selectpicker show-tick form-control" id="type-status" title="Status"
-                        data-style="btn-solid" data-width="200px">
-                        <option value="">Tout</option>
-                        <option value="1">Publier</option>
-                        <option value="0">Désactiver</option>
-                        <option value="pending">En attente</option>
-                        
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-4">
-                      <div class="flexbox">
-                        <select class="selectpicker show-tick form-control" id="type-account" title="Compte"
-                          data-style="btn-solid" data-width="200px">
-                          <option value="">Tout</option>
-                          <option value="0">Standard</option>
-                          <option value="1">Premium</option>
-                          <option value="2">En attente</option>
-                        </select>
-                      </div>
-                    </div>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-4">
-              <div class="flexbox">
-                <div class="input-group-icon input-group-icon-left mr-3">
-                  <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
-                  <input class="form-control form-control-solid" id="key-search" type="text"
-                    placeholder="Rechercher ...">
-                </div>
-              </div>
+  <app-switcher (refresh)="reloadDatatable()"></app-switcher>
+  <div class="ibox">
+    <div class="ibox-body">
+      <h5 class="font-strong mb-4">LES ENTREPRISES</h5>
+
+      <form class="form-success mb-4">
+
+        <div class="row mb-4">
+          <div class="col-md-4 mb-2 mb-sm-0">
+            <select class="selectpicker show-tick form-control" id="type-account" title="Tout les types de compte"
+              data-style="btn-solid" data-width="100%">
+              <option value="">Tout les types de compte</option>
+              <option value="0">Standard</option>
+              <option value="1">Premium</option>
+              <option value="2">En attente</option>
+            </select>
+          </div>
+
+          <app-activity-area class="col-md-4 mb-2 mb-sm-0" (choosed)="onChoosed($event)"></app-activity-area>
+
+          <div class="col-md-4 mb-2 mb-sm-0">
+            <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
+              <option value="">Tous les status</option>
+              <option value="pending">En attente</option>
+              <option value="1">Publier</option>
+              <option value="0">Désactiver</option>
+            </select>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 form-group mb-2 mb-sm-0">
+            <div class="input-group-icon input-group-icon-left mr-3">
+              <span class="input-icon input-icon-right font-16"><i class="fa fa-calendar"></i></span>
+              <input class="form-control" id="daterange" autocomplete="off" type="text" value="">
             </div>
           </div>
+          <div class="col-md-4 form-check mb-2 mb-sm-0">
+            <div class="input-group-icon input-group-icon-left mr-3">
+              <span class="input-icon input-icon-right font-16"><i class="ti-search"></i></span>
+              <input class="form-control form-control-solid" id="key-search" type="text" placeholder="Rechercher ...">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <button type="button" (click)="resetFilterSearch()" class="btn btn-sm btn-info">Reinitialiser les filtres</button>
+          </div>
         </div>
-  
-        <div class="table-responsive row">
-  
-          <table class="table table-bordered table-hover" id="orders-table">
-            <thead class="thead-default thead-lg">
-              <tr>
-                <th>#</th>
-                <th>Entreprise</th>
-                <th>Type de compte</th>
-                <th>Date d'ajout</th>
-                <th>Status</th>
-                <th>Secteur d'activité</th>
-                <th>Région</th>
-              </tr>
-            </thead>
-  
-          </table>
-        </div>
+
+      </form>
+
+      <div class="table-responsive row">
+        <table class="table table-bordered table-hover" id="orders-table">
+          <thead class="thead-default thead-lg">
+            <tr>
+              <th>#</th>
+              <th>Entreprise</th>
+              <th>Type de compte</th>
+              <th>Date d'ajout</th>
+              <th>Status</th>
+              <th>Secteur d'activité</th>
+              <th>Région</th>
+              <th>Modifier</th>
+            </tr>
+          </thead>
+        </table>
       </div>
     </div>
   </div>
+</div>
