Ajouter une fonctionnalité pour modifier une entreprise

--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -1,5 +1,6 @@
 <div class="page-content fade-in-up">
   <app-switcher (refresh)="reloadDatatable()"></app-switcher>
+  <app-company-edit (refresh)="reloadDatatable()"></app-company-edit>
   <div class="ibox">
     <div class="ibox-body">
       <h5 class="font-strong mb-4">LES ENTREPRISES</h5>
